# Labs_2course

./: CMakeLists.txt  README.md
OSI/lab1/task1/: osi_lab1_1.c
OSI/lab1/task2/: osi_lab1_2.c
OSI/lab1/task3/: osi_lab1_3.c
OSI/lab1/task4/: osi_lab1_4.c
OSI/lab2/task1/: a.out  lab2_1  lab2_1.c
OSI/lab2/task2/: a.out  lab2_2  lab2_2.c
OSI/lab2/task3/: a.out  lab2_3.c  lab2_3_1.c
OSI/lab2/task4/: a.out  file.txt  file1.txt  file2.txt  file3.txt  lab2_4.c
OSI/lab2/task5/: a.out  lab2_5.c
OSI/lab3/task1/: client  client.c  server.c
OSI/lab3/task5/: a.out  lab3_5.c
mathpractic/lab2/: header.h
mathpractic/lab2/task1/: lab2_1.c
mathpractic/lab2/task10/: lab2_10.c
mathpractic/lab2/task2/: lab2_2.c
mathpractic/lab2/task3/: file1.txt  file2.txt  file3.txt  lab2_3.c
mathpractic/lab2/task4/: lab2_4.c
mathpractic/lab2/task5/: lab2_5.c
mathpractic/lab2/task7/: lab2_7.c
mathpractic/lab2/task8/: lab2_8.c
mathpractic/lab2/task9/: lab2_9.c
mathpractic/lab3/: header.h
mathpractic/lab3/task1/: lab3_1.c
mathpractic/lab3/task10/: in.txt  lab3_10.c  out.txt
mathpractic/lab3/task2/: lab3_2.c
mathpractic/lab3/task3/: file1.txt  file2.txt  lab3_3.c
mathpractic/lab3/task4/: lab3_4.c  lab3_4_1.c
mathpractic/lab3/task5/: file1.txt  file_output.txt  lab3_5.c
mathpractic/lab3/task7/: lab3_7.c  list.c  test.txt
mathpractic/lab4/: CMakeLists.txt  header.h
mathpractic/lab4/lab_4.9/: BinaryHeap.c  BinomialHeap.c  DynamicArray.c  HashSet.c  LeftistHeap.c  Treap.c  app1.txt  app2.txt  app3.txt  app4.txt  app5.txt  control_time.c  laba4_9.c  structures.h  tests.c
mathpractic/lab4/task1/: lab4_1.c  test.txt
mathpractic/lab4/task10/: 4_10.c  a.out  bor.c  data.txt  data1.txt  expression.txt  expression1.txt  expression_tree.c  main  stack.c  test.txt  valgrind_output.txt
mathpractic/lab4/task2/: header.h  lab4_2.c
mathpractic/lab4/task5/: err.txt  lab4_5.c  stack.c  test1.txt  test2.txt
mathpractic/lab4/task6/: 5hA6OnLEDv.txt  fY8yXo9GmP.txt  lab4_6.c  test.txt  tree.c
mathpractic/lab4/task7/: lab4_7.c
mathpractic/lab4/task9/: BinaryHeap.c  BinomialHeap.c  lab4_9.c
prolog_2sem/: task1.fsx  task2.fsx
